public and private models

--- a/notebooks/Modeling_notebook.ipynb
+++ b/notebooks/Modeling_notebook.ipynb
@@ -35,21 +35,12 @@
    "source": [
     "#Database folder and tables...and year\n",
     "Public_file_table_dict = {\n",
-    "'IPEDS201920': ['F1819_F1A', 'DRVGR2019', 'DRVF2019', '2019'],\n",
-    "'IPEDS201819': ['F1718_F1A', 'DRVGR2018', 'DRVF2018', '2018'],\n",
-    "'IPEDS201718': ['F1617_F1A', 'DRVGR2017', 'DRVF2017', '2017'],\n",
-    "'IPEDS201617': ['F1516_F1A', 'DRVGR2016', 'DRVF2016', '2016'],\n",
-    "'IPEDS201516': ['F1415_F1A', 'DRVGR2015', 'DRVF2015', '2015'],\n",
-    "'IPEDS201415': ['F1314_F1A', 'DRVGR2014', 'DRVF2014', '2014']\n",
-    "}\n",
-    "\n",
-    "Private_file_table_dict = {\n",
-    "'IPEDS201920': ['F1819_F2', 'DRVGR2019', 'DRVF2019', '2019'],\n",
-    "'IPEDS201819': ['F1718_F2', 'DRVGR2018', 'DRVF2018', '2018'],\n",
-    "'IPEDS201718': ['F1617_F2', 'DRVGR2017', 'DRVF2017', '2017'],\n",
-    "'IPEDS201617': ['F1516_F2', 'DRVGR2016', 'DRVF2016', '2016'],\n",
-    "'IPEDS201516': ['F1415_F2', 'DRVGR2015', 'DRVF2015', '2015'],\n",
-    "'IPEDS201415': ['F1314_F2', 'DRVGR2014', 'DRVF2014', '2014']\n",
+    "'IPEDS201920': ['F1819_F1A'],\n",
+    "'IPEDS201819': ['F1718_F1A'],\n",
+    "'IPEDS201718': ['F1617_F1A'],\n",
+    "'IPEDS201617': ['F1516_F1A'],\n",
+    "'IPEDS201516': ['F1415_F1A'],\n",
+    "'IPEDS201415': ['F1314_F1A']\n",
     "}"
    ]
   },
@@ -101,15 +92,6 @@
    "source": [
     "#call the function\n",
     "access_to_csv(Public_file_table_dict, 'Public_Financials')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "access_to_csv(Private_file_table_dict, 'Private_Financials')"
    ]
   },
   {
