Final Jupyter Notebook

--- a/notebooks/cleaning_notebook.ipynb
+++ b/notebooks/cleaning_notebook.ipynb
@@ -1095,10 +1095,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #drop any column that has almost 40% missing values\n",
-    "# res2 = df.columns[df.isnull().sum() > 428]\n",
-    "# df.drop(res2, inplace=True, axis=1)\n",
-    "# df.set_index(['year', 'UNITID'], inplace=True)"
+    "#drop any column that has almost 40% missing values\n",
+    "res2 = df.columns[df.isnull().sum() > 428]\n",
+    "df.drop(res2, inplace=True, axis=1)\n",
+    "df.set_index(['year', 'UNITID'], inplace=True)"
    ]
   },
   {
@@ -1542,7 +1542,7 @@
     "        if worst_pval > threshold_out:\n",
     "            changed=True\n",
     "            worst_feature = pvalues.argmax()\n",
-    "            included.remove(worst_feature)\n",
+    "            included.remove(included[worst_feature])\n",
     "            #if verbose:\n",
     "                #print('Drop {:30} with p-value {:.6}'.format(worst_feature, worst_pval))\n",
     "        if not changed:\n",
