changes to coincide with READMe

--- a/Black_Graduation_Rates_notebook.ipynb
+++ b/Black_Graduation_Rates_notebook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -584,9 +584,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Total noncurrent liabilities', 3.405036565939143), ('Long-term debt, current portion', 2.6526917339789264), ('Total for plant, property and equipment - Ending balance', 2.647547014001901), ('Other current liabilities', 2.561166539525123), ('Total assets ', 2.4330580551347003), ('Other noncurrent liabilities ', 2.3193812990385654), ('UNITID', 2.2156178004025184), ('Construction in progress - Ending balance', 2.0337925362047384), ('Buildings - Ending balance', 1.6831932156847096), ('Net position', 1.2567284932107805)]\n",
+      "[('Total liabilities ', 0.3047984735454565), ('Total current liabilities', -0.07434698048505413), ('Unrestricted', -0.39351308330374846), ('Total noncurrent assets', -0.4698795279138824), ('Long-term debt', -1.1482688089966482), ('Land  improvements - Ending balance', -1.177822542236063), ('Restricted-nonexpendable', -1.528746483596284), ('Invested in capital assets, net of related debt', -1.7322989982165784), ('Infrastructure - Ending balance', -2.1352291283622056), ('Restricted-expendable', -2.2307411819695373)]\n"
+     ]
+    }
+   ],
    "source": [
     "#Feature Coefficients\n",
     "important_private = []\n",
@@ -607,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +624,7 @@
      "output_type": "stream",
      "text": [
       "Tree PR R^2:0.3854600914296248\n",
-      "Tree PR R^2 Validation Score:0.3753189333418302\n",
+      "Tree PR R^2 Validation Score:nan\n",
       "Tree PR Root Mean Squared Error:21.15905495300064\n"
      ]
     }
@@ -641,16 +650,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree PUB R^2:0.4165381860063039\n",
-      "Tree PUB R^2 Validation Score:0.35983841908187486\n",
-      "Tree PUB Root Mean Squared Error:15.796266030275119\n"
+      "Tree PUB R^2:0.40758341816695587\n",
+      "Tree PUB R^2 Validation Score:0.3781344771447312\n",
+      "Tree PUB Root Mean Squared Error:15.917022246408145\n"
      ]
     }
    ],
@@ -703,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
